# SimpleMath

./: .clang-format  .gitignore  CMakeLists.txt  Matrix.h  README.md  Vector.h  main.cpp  test.cpp
